# AOCR2024_health4all

./: .gitignore  README.md  pyproject.toml
notebooks/: c3r18_models.ipynb  evaluation_preprocessment_slices.ipynb  load_data.ipynb  load_masks.ipynb  test_try_c3d_model.ipynb  transfer_learning.ipynb  unet.ipynb
notebooks/early trials/: load_data.ipynb  test_try_c3d_model.ipynb  transfer_learning.ipynb  unet.ipynb
src/: main.py
src/dataset/: lazy_dataset.py
src/model/: cv_models.py
src/trainer/: trainer.py
src/utils/: utils.py
