[tool.poetry]
name = "accute-appendix-torch"
version = "0.1.0"
description = "Accute appendix"
authors = ["email"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.1.1"
pandas = "^1.3"
scikit-learn = "^0.24"
matplotlib = "^3.4"
torchio = "^0.18"
ipywidgets = "^8.1.1"
torchvision = "0.16.1"

[tool.poetry.dev-dependencies]
notebook = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
